--- a/advance-task12/ajax/index.html
+++ b/advance-task12/ajax/index.html
@@ -3,90 +3,84 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>加载更多</title>
     <style>
         * {
-            margin: 0;
-            padding: 0 2px;
-            box-sizing: border-box;
-        }
-        #ct li,
-        #load-more {
-            display: block;
-            line-height: 30px;
-            margin: 10px auto;
-            padding: 5px 10px;
-        }
+               margin: 0;
+               padding: 0;
+           }
         #ct li {
             list-style: none;
             border: 1px solid #ccc;
+            padding: 10px;
+            margin-top: 10px;
+            cursor:pointer;
         }
-        #ct li:hover {
-            background: #ccc;
-            color: white;
-        }
-        #load-more {
-            color: red;
+        .btn {
+            display:inline-block;
+            text-align:center;
+            border: 1px solid #E27272;
+            border-radius: 3px;
+            width: 80px;
+            height: 40px;
+            line-height: 40px;
             text-decoration: none;
-            border: 1px solid red;
-            border-radius: 5px;
-            width: 100px;
-            text-align: center;
+            color: #E27272;
+        }
+        #ct li:hover{
+            background: deepskyblue;
+            color: #fff;
         }
     </style>
 </head>
-
 <body>
 <ul id="ct">
     <li>内容1</li>
     <li>内容2</li>
 </ul>
-<a href="#" id="load-more" class="btn">
-    加载更多
-</a>
+<a href="#" id="load-more" class="btn">加载更多</a>
 
 <script>
     var ct = document.querySelector('#ct')
     var btn = document.querySelector('#load-more')
-    var pageIndex = 3;
-    var isDataArrive = true
-    btn.addEventListener('click', function (e) {
-        //取消a链接默认跳转到页面顶部的事件，直接将a标签內href的值改为javascript:void(0)也可，即href值为undefined
+    var pageIndex = 3
+
+    var isDataArrive = true; //设置状态锁,防止加载的数据回来之前用户重复点击
+
+    btn.addEventListener('click',function(e){   //防止a链接点击跳转到顶部
         e.preventDefault()
-        if (!isDataArrive) {
-            return
+        if(!isDataArrive){
+            return;
         }
+
         var xhr = new XMLHttpRequest()
-        xhr.onreadystatechange = function () {
-            if (xhr.readyState === 4) {
-                if (xhr.status === 200 || xhr.status === 304) {
+        xhr.onreadystatechange = function(){
+            if(xhr.readyState === 4){
+                if(xhr.status === 200 || xhr.status === 304){
                     var results = JSON.parse(xhr.responseText)
                     console.log(results);
                     var fragment = document.createDocumentFragment()
-                    for (var i = 0; i < results.length; i++) {
-                        var node = document.createElement('li')
+                    for (var i = 0;i < results.length;i++) {
+                        var node = doncument.createElement('li')
                         node.innerText = results[i]
                         fragment.appendChild(node)
                     }
                     ct.appendChild(fragment)
-                    pageIndex = pageIndex + 5
-                } else {
+                    pageIndex = pageIndex + 5;
+                }else{
                     alert('出错了')
                 }
-                isDataArrive = true
+                isDataArrive = true;
             }
         }
-        //远程可看 // xhr.open('get', 'https://www.mydolby.cn:9443/loadMore?index=' + pageIndex + '&length=5', true)
 
         //本地模拟
-        xhr.open('get', 'http://localhost:8080/loadMore?index=' + pageIndex + '&length=5', true)
-
+        xhr.open('get','http://localhost:8080/loadMore?index=' + pageIndex + '&length=5', true)
         xhr.send()
-        isDataArrive = false
+        siDataArrive = false;   //等待数据到来,状态锁
     })
 </script>
+
 </body>
 
 </html>
