--- a/advance-task12/ajax/index.html
+++ b/advance-task12/ajax/index.html
@@ -16,6 +16,12 @@
             margin-top: 10px;
             cursor:pointer;
         }
+        #load-more {
+            display: block;
+            margin: 10px auto;
+            text-align: center;
+            cursor: pointer;
+        }
         .btn {
             display:inline-block;
             text-align:center;
@@ -28,7 +34,7 @@
             color: #E27272;
         }
         #ct li:hover{
-            background: deepskyblue;
+            background: #ccc;
             color: #fff;
         }
     </style>
