--- a/advance-task15/jQuery-ajax/index.html
+++ b/advance-task15/jQuery-ajax/index.html
@@ -40,7 +40,7 @@
 <body>
     <ul id = "ct">
         <li>content1</li>
-        <li>content2s</li>
+        <li>content2</li>
     </ul>
     <a href="#" id = "btn">load more</a>
     <script>
