--- a/advance-task15/jQuery-ajax/static/index.html
+++ b/advance-task15/jQuery-ajax/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>加载更多</title>
-    <link rel="stylesheet" href="css/a.css">
+    <link rel="stylesheet" href="css/demo.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <a id="loadMore" class="btn">加载更多</a>
 </div>
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/b.js"></script>
+<script src="js/demo.js"></script>
 </body>
 
 </html>
